--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE>
 <html>
     <head>
+        <title>iTunes Search</title>
+        <meta name="keywords" content="search, itunes search, search itunes">
+        <meta name="description" content="Search iTunes api">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-    <script src="app/app.js"></script>
-    <script>
-        start();
-    </script>
+        <br />
+        <form>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" name="searchField" placeholder="Enter your iTunes search here">
+            </div>
+        <button type="button" class="btn btn-primary">Search</button>
+        </form>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+        <script src="js/search.js"></script>
     </body>
 </html>
