--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE>
-<html>
+<html  lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>iTunes Search</title>
         <meta name="keywords" content="search, itunes search, search itunes">
         <meta name="description" content="Search iTunes api">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
-    <body>
-        <br />
-        <form>
-            <div class="col-sm-8">
-                <input type="text" class="form-control" name="searchField" placeholder="Enter your iTunes search here">
-            </div>
-        <button type="button" class="btn btn-primary">Search</button>
-        </form>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-        <script src="js/search.js"></script>
+    <body background="img/wallpaper.jpg">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <form class="formTop" id="topSearchForm">
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <input type="text" class="form-control" name="searchField">
+                    </div>
+                </div>
+            </form>
+        </nav>
+
+        <div class="container-fluid">
+            <form class="form" id="searchForm">
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <input type="text" class="form-control width-full" name="searchField">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <button id="searchForm" type="button" class="btn btn-default center-block" onclick="changeSearch()">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
     </body>
 </html>
