--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE>
-<html  lang="en">
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>iTunes Search</title>
         <meta name="keywords" content="search, itunes search, search itunes">
@@ -11,34 +11,32 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body background="img/wallpaper.jpg">
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <form class="formTop" id="topSearchForm">
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <input type="text" class="form-control" name="searchField">
-                    </div>
-                </div>
-            </form>
-        </nav>
-
         <div class="container-fluid">
-            <form class="form" id="searchForm">
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <input type="text" class="form-control width-full" name="searchField">
-                    </div>
+            <div class="row-fluid">
+                <div class="span12">
+                    <h1>iTunes Search</h1>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <button id="searchForm" type="button" class="btn btn-default center-block" onclick="changeSearch()">Search</button>
+                <div class="span12">
+                    <div class="input-group">
+                        <input type="text" class="form-control" name="search-word" id="search-word" placeholder="Enter artist, song, or album.">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">Search</button>
+                        </span>
                     </div>
+                    <ul id="music-container">
+                        <li>Loading iTunes top songs</li>
+                    </ul>
                 </div>
-            </form>
+            </div>
         </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+        <footer class="footer">
+            <p>© 2016 Nicholas Underwood</p>
+        </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="js/pagination.js"></script>
+        <script type="text/javascript" src="js/pagination.min/js"></script>
+        <script type="text/javascript" src="js/app.js"></script>     
     </body>
 </html>
