--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" name="search-word" id="search-word" placeholder="Enter artist, song, or album.">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Search</button>
+                            <button id="search-button" class="btn btn-default" type="button">Search</button>
                         </span>
                     </div>
                     <ul id="music-container">
@@ -28,38 +28,17 @@
                     </ul>
                 </div>
             </div>
-        </div>
-        <div class="text-xs-center" id="pagination-container">
-            <nav aria-label="Page navigation">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#">5</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>        
+        </div>      
+        <div class="text-xs-center">
+            <button id="previous-button" class="btn btn-default" type="button">Prev</button>
+            <button id="next-button" class="btn btn-default" type="button">Next</button>
+        </div>  
         <footer class="footer">
             <p>© 2016 Nicholas Underwood</p>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="js/pagination.js"></script>
-        <script type="text/javascript" src="js/pagination.min/js"></script>
         <script type="text/javascript" src="js/app.js"></script>     
     </body>
 </html>
