Add background image to body.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
-    <body background="img/wallpaper.jpg">
+    <body>
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>      
-        <div class="text-xs-center">
+        <div class="text-xs-center pager-buttons">
             <button id="previous-button" class="btn btn-default" type="button">Prev</button>
             <button id="next-button" class="btn btn-default" type="button">Next</button>
         </div>  
