--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>iTunes Search</title>
         <meta name="keywords" content="search, itunes search, search itunes">
         <meta name="description" content="Search iTunes api">
+        <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
@@ -14,14 +15,14 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
-                    <h1>iTunes Search</h1>
-                </div>
-                <div class="span12">
                     <div class="input-group">
                         <input type="text" class="form-control" name="search-word" id="search-word" placeholder="Enter artist, song, or album.">
                         <span class="input-group-btn">
                             <button id="search-button" class="btn btn-default" type="button">Search</button>
                         </span>
+                    </div>
+                    <div class="text-xs-center" id="top-songs">
+                        <h3>Top Songs</h3>
                     </div>
                     <ul id="music-container">
                         <li>Loading iTunes top songs</li>
@@ -34,7 +35,7 @@
             <button id="next-button" class="btn btn-default" type="button">Next</button>
         </div>  
         <footer class="footer">
-            <p>© 2016 Nicholas Underwood</p>
+            <p>© 2016 nMu</p>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
