Improve look and feel.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>iTunes Search</title>
         <meta name="keywords" content="search, itunes search, search itunes">
         <meta name="description" content="Search iTunes api">
-        <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+        <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
@@ -22,7 +22,7 @@
                         </span>
                     </div>
                     <div class="text-xs-center" id="top-songs">
-                        <h3>Top Songs</h3>
+                        <h3>Top 50 Songs</h3>
                     </div>
                     <ul id="music-container">
                         <li>Loading iTunes top songs</li>
