--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="row-fluid">
                 <div class="span12">
                     <div class="input-group">
-                        <input type="text" class="form-control" name="search-word" id="search-word" placeholder="Enter artist, song, or album.">
+                        <input type="text" class="form-control" name="search-word" id="search-word" placeholder="Enter an artist, song, or album.">
                         <span class="input-group-btn">
                             <button id="search-button" class="btn btn-default" type="button">Search</button>
                         </span>
@@ -35,7 +35,7 @@
             <button id="next-button" class="btn btn-default" type="button">Next</button>
         </div>  
         <footer class="footer">
-            <p>© 2016 nMu</p>
+            <p>© 2016 Nicholas Underwood</p>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
